research.log
  File "<stdin>", line 1
    echo $! > /tmp/researcher.pid
         ^
SyntaxError: invalid syntax
